[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "A recursive webcraweler"
authors = ["Roman Levin <romanlevin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"
ipdb = "^0.13.5"

[tool.poetry.scripts]
crawler = "crawler.crawler:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
