[tool.poetry]
name = "crawler"
version = "0.2.0"
description = "A recursive webcraweler"
authors = ["Roman Levin <romanlevin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.extras]
debug = ["ipdb"]

[tool.poetry.scripts]
crawler = "crawler.crawler:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
ipdb = {version = "^0.13.9", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"